More simulation and util cleanup

--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -81,7 +81,8 @@
     "    \"E\": -117\n",
     "}\n",
     "\n",
-    "coastline = utils.load_pts_mat(utils.MATLAB_DIR / \"coastline.mat\", \"latz0\", \"lonz0\")\n",
+    "lats, lons = utils.load_pts_mat(utils.MATLAB_DIR / \"coastline.mat\", \"latz0\", \"lonz0\")\n",
+    "coastline = np.array([lats, lons])\n",
     "# just filter out the problematic upper coastline where it goes up and down\n",
     "coastline = coastline[:, :288]"
    ]
