Finally fix particle age plotting, fix empty pset bugs

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "for sim in sims:\n",
-    "    sim.generate_gif()"
+    "    print(sim.generate_gif())"
    ]
   }
  ],
