Refactor and fix gapfilling

--- a/gapfilling-Copy1.ipynb
+++ b/gapfilling-Copy1.ipynb
@@ -68,7 +68,7 @@
     "from datetime import timedelta, datetime\n",
     "\n",
     "import utils\n",
-    "from parcels_utils import HFRGrid"
+    "from parcels_utils import xr_dataset_to_fieldset, HFRGrid"
    ]
   },
   {
@@ -207,11 +207,7 @@
     "\n",
     "in theory, the latitude and longitude values are equally spaced. however, the difference between the coordinate values always flucuates a very small amount between two distinct values, so it's not perfectly equally spaced.\n",
     "\n",
-    "from testing, this causes enough error to completely change a simulation, so a kdtree must be used.\n",
-    "\n",
-    "### another note\n",
-    "\n",
-    "I just looked at the particle trajectory that used the indexing without kd trees and it looked MAJORLY fucked up, so I probably wrote something wrong with the method. TODO will come back to this later."
+    "from testing, this causes enough error to completely change a simulation, so a kdtree must be used."
    ]
   },
   {
@@ -220,63 +216,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.spatial\n",
-    "\n",
-    "# set up kdtrees for all references\n",
-    "for f in interp_references:\n",
-    "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lat\"]]).T)\n",
-    "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lon\"]]).T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_nearest_current(ref, t, lat, lon):\n",
-    "    index = (t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1])\n",
-    "    return ref[\"xrds\"][\"u\"].values[index], ref[\"xrds\"][\"v\"].values[index]\n",
-    "\n",
-    "\n",
-    "def get_nearest_index(latkd, lonkd, t, lat, lon):\n",
-    "    return t, latkd.query([lat])[1], lonkd.query([lon])[1]\n",
-    "\n",
-    "\n",
-    "def get_nearest_index_2(lat_arr, lon_arr, t, lat, lon):\n",
-    "    lat_diff = np.diff(lat_arr).mean()\n",
-    "    lon_diff = np.diff(lon_arr).mean()\n",
-    "    lat_idx = int(round((lat - lat_arr[0]) / lat_diff))\n",
-    "    lat_idx = max(0, lat_idx)\n",
-    "    lat_idx = min(len(lat_arr) - 1, lat_idx)\n",
-    "    lon_idx = int(round((lon - lon_arr[0]) / lon_diff))\n",
-    "    lon_idx = max(0, lon_idx)\n",
-    "    lon_idx = min(len(lon_arr) - 1, lon_idx)\n",
-    "    return t, lat_idx, lon_idx\n",
-    "\n",
-    "\n",
-    "def get_current_interp(ref, t, lat, lon):\n",
-    "    return ref[\"fs_flat\"].U[t, 0, lat, lon], ref[\"fs_flat\"].V[t, 0, lat, lon]\n",
-    "\n",
-    "\n",
     "def get_interped(i, ref, invalid_where):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        i (int): index on invalid_where\n",
-    "        ref (dict): reference Dataset\n",
+    "        ref (HFRGrid): reference Dataset\n",
     "        invalid_where (array-like): (3, n) dimensional array representing all invalid positions\n",
     "    \n",
     "    Returns:\n",
     "        (u, v): (nan, nan) if no data was found, interpolated values otherwise\n",
     "    \"\"\"\n",
-    "    time_diff = np.diff(ref[\"fs_flat\"].U.grid.time)[0]\n",
+    "    time_diff = np.diff(ref.fieldset_flat.U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
-    "    lat = target[\"lat\"][invalid_where[1][i]]\n",
-    "    lon = target[\"lon\"][invalid_where[2][i]]\n",
-    "    current_u, current_v = get_current_interp(ref, t * time_diff, lat, lon)\n",
+    "    lat = target.lats[invalid_where[1][i]]\n",
+    "    lon = target.lons[invalid_where[2][i]]\n",
+    "    current_u, current_v = ref.get_fs_current(t * time_diff, lat, lon)\n",
     "    current_abs = abs(current_u) + abs(current_v)\n",
     "    # if both the u and v components are 0, there's probably no data there\n",
-    "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]) or current_abs == 0:\n",
+    "    if np.isnan(ref.get_closest_current(t, lat, lon)[0]) or current_abs == 0:\n",
     "        return np.nan, np.nan\n",
     "    return current_u, current_v"
    ]
@@ -294,8 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_interped_u = target[\"xrds\"][\"u\"].values.copy()\n",
-    "target_interped_v = target[\"xrds\"][\"v\"].values.copy()\n",
+    "target_interped_u = target.xrds[\"u\"].values.copy()\n",
+    "target_interped_v = target.xrds[\"v\"].values.copy()\n",
     "invalid_interped = invalid.copy()\n",
     "for f in interp_references:\n",
     "    invalid_pos_new = np.where(invalid_interped)\n",
@@ -309,7 +266,7 @@
     "    target_interped_u[invalid_pos_new] = arr_u\n",
     "    target_interped_v[invalid_pos_new] = arr_v\n",
     "    invalid_interped = utils.generate_mask_invalid(target_interped_u)\n",
-    "    print(f\"total invalid values after interpolation with {f['name']}: {invalid_interped.sum()}\")\n",
+    "    print(f\"total invalid values after interpolation with {f}: {invalid_interped.sum()}\")\n",
     "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")"
    ]
   },
@@ -361,8 +318,8 @@
     "    target_smoothed_u[i] = u_array\n",
     "    target_smoothed_v[i] = v_array\n",
     "    \n",
-    "target_smoothed_u[np.where(no_data)] = np.nan\n",
-    "target_smoothed_v[np.where(no_data)] = np.nan\n",
+    "target_smoothed_u[no_data] = np.nan\n",
+    "target_smoothed_v[no_data] = np.nan\n",
     "\n",
     "eng.quit()"
    ]
@@ -381,9 +338,9 @@
    "outputs": [],
    "source": [
     "# re-add coordinates, dimensions, and metadata to interpolated data\n",
-    "darr_u = utils.conv_to_dataarray(target_smoothed_u, target[\"xrds\"][\"u\"])\n",
-    "darr_v = utils.conv_to_dataarray(target_smoothed_v, target[\"xrds\"][\"v\"])\n",
-    "target_interped_xrds = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
+    "darr_u = utils.conv_to_dataarray(target_smoothed_u, target.xrds[\"u\"])\n",
+    "darr_v = utils.conv_to_dataarray(target_smoothed_v, target.xrds[\"v\"])\n",
+    "target_interped_xrds = target.xrds.drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
    ]
   },
   {
@@ -411,7 +368,7 @@
    "outputs": [],
    "source": [
     "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
-    "target[\"fs\"].U.show()  # uninterpolated\n",
+    "target.fieldset.U.show()  # uninterpolated\n",
     "fs_interp.U.show()  # interpolated, gapfilled, smoothed"
    ]
   }
