--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_data = utils.generate_mask_none(mask_nc[\"xrds\"][\"u\"].values)[0]\n",
+    "no_data = utils.generate_mask_none(mask_nc[\"xrds\"][\"u\"].values)\n",
     "no_data = np.tile(no_data, (target[\"xrds\"][\"time\"].size, 1, 1))\n",
     "invalid = utils.generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
     "invalid_pos = np.where(invalid)\n",
