thredds_utils slice

--- a/gapfilling-Copy1.ipynb
+++ b/gapfilling-Copy1.ipynb
@@ -198,19 +198,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### note\n",
-    "\n",
-    "https://stackoverflow.com/questions/12923586/nearest-neighbor-search-python\n",
-    "\n",
-    "in theory, the latitude and longitude values are equally spaced. however, the difference between the coordinate values always flucuates a very small amount between two distinct values, so it's not perfectly equally spaced.\n",
-    "\n",
-    "from testing, this causes enough error to completely change a simulation, so a kdtree must be used."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -267,15 +254,7 @@
     "    target_interped_v[invalid_pos_new] = arr_v\n",
     "    invalid_interped = utils.generate_mask_invalid(target_interped_u)\n",
     "    print(f\"total invalid values after interpolation with {f}: {invalid_interped.sum()}\")\n",
-    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
     "print(f\"total invalid values on interpolated: {invalid_interped.sum()}\")"
    ]
   },
