Allow xr datasets to load fieldsets raw

--- a/gapfilling-Copy1.ipynb
+++ b/gapfilling-Copy1.ipynb
@@ -60,6 +60,7 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "from pathlib import Path\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "import xarray as xr\n",
@@ -93,14 +94,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = HFRGrid(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_2020-08.nc\")\n",
+    "files_root = Path(\"/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/current_netcdfs\")\n",
+    "\n",
+    "target = HFRGrid(files_root / \"west_coast_1km_hourly/tj_plume_2020-08.nc\")\n",
     "\n",
     "interp_references = [\n",
-    "    HFRGrid(utils.CURRENT_NETCDF_DIR / \"west_coast_2km_hourly/tj_plume_2020-08.nc\"),\n",
-    "    HFRGrid(utils.CURRENT_NETCDF_DIR / \"west_coast_6km_hourly/tj_plume_2020-08.nc\"),\n",
+    "    HFRGrid(files_root / \"west_coast_2km_hourly/tj_plume_2020-08.nc\"),\n",
+    "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-08.nc\"),\n",
     "]\n",
     "\n",
-    "mask_nc = HFRGrid(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_sample.nc\", init_fs=False)"
+    "mask_nc = HFRGrid(files_root / \"west_coast_1km_hourly/tj_sample.nc\", init_fs=False)"
    ]
   },
   {
@@ -246,6 +249,7 @@
     "    num_invalid_new = invalid_interped.sum()\n",
     "    arr_u = np.zeros(num_invalid_new)\n",
     "    arr_v = np.zeros(num_invalid_new)\n",
+    "    print(f\"Attempting to interpolate {num_invalid_new} points...\")\n",
     "    for i in range(num_invalid_new):\n",
     "        c_u, c_v = get_interped(i, f, invalid_pos_new)\n",
     "        arr_u[i] = c_u\n",
@@ -286,6 +290,7 @@
     "u_list = target_smoothed_u.tolist()\n",
     "v_list = target_smoothed_v.tolist()\n",
     "\n",
+    "print(f\"Filling {len(u_list)} fields...\")\n",
     "for i in range(len(u_list)):\n",
     "    u_mat = matlab.double(u_list[i])\n",
     "    v_mat = matlab.double(v_list[i])\n",
@@ -354,9 +359,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_parcels",
+   "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3_parcels"
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -368,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
