--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -203,9 +203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_parcels",
+   "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3_parcels"
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
