--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -60,6 +60,7 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "from pathlib import Path\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "import xarray as xr\n",
@@ -68,7 +69,7 @@
     "from datetime import timedelta, datetime\n",
     "\n",
     "import utils\n",
-    "from parcels_utils import get_file_info, xr_dataset_to_fieldset"
+    "from parcels_utils import xr_dataset_to_fieldset, HFRGrid"
    ]
   },
   {
@@ -93,14 +94,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_2020-08.nc\", utils.DATA_1KM, name=\"target\")\n",
+    "files_root = Path(\"/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/current_netcdfs\")\n",
+    "\n",
+    "target = HFRGrid(files_root / \"west_coast_1km_hourly/tj_plume_2020-08.nc\")\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_2km_hourly/tj_plume_2020-08.nc\", utils.DATA_2KM, name=\"ref2km\"),\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_6km_hourly/tj_plume_2020-08.nc\", utils.DATA_6KM, name=\"ref6km\")\n",
+    "    HFRGrid(files_root / \"west_coast_2km_hourly/tj_plume_2020-08.nc\"),\n",
+    "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-08.nc\"),\n",
     "]\n",
     "\n",
-    "mask_nc = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_sample.nc\", utils.DATA_1KM, name=\"sample\")"
+    "mask_nc = HFRGrid(files_root / \"west_coast_1km_hourly/tj_sample.nc\", init_fs=False)"
    ]
   },
   {
@@ -116,23 +119,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "targ_min = (target[\"lat\"][0], target[\"lon\"][0])\n",
-    "targ_max = (target[\"lat\"][-1], target[\"lon\"][-1])\n",
-    "for ir in interp_references:\n",
-    "    print(f\"checking {ir['name']}\")\n",
-    "    assert ir[\"lat\"][0] <= targ_min[0]\n",
-    "    assert ir[\"lon\"][0] <= targ_min[1]\n",
-    "    assert ir[\"lat\"][-1] >= targ_max[0]\n",
-    "    assert ir[\"lon\"][-1] >= targ_max[1]\n",
-    "    assert ir[\"timerng\"][0] <= target[\"timerng\"][0]\n",
-    "    assert ir[\"timerng\"][1] >= target[\"timerng\"][1]\n",
-    "assert target[\"res\"] == mask_nc[\"res\"]\n",
-    "# mask_nc should just be sliced before being used\n",
-    "# change these asserts to >= later when that's done\n",
-    "assert mask_nc[\"lat\"][0] == targ_min[0]\n",
-    "assert mask_nc[\"lon\"][0] == targ_min[1]\n",
-    "assert mask_nc[\"lat\"][-1] == targ_max[0]\n",
-    "assert mask_nc[\"lon\"][-1] == targ_max[1]"
+    "def validate_grids(target, references, mask):\n",
+    "    targ_times, targ_lats, targ_lons = target.get_coords()\n",
+    "    targ_min = (targ_lats[0], targ_lons[0])\n",
+    "    targ_max = (targ_lats[-1], targ_lons[-1])\n",
+    "    # check references\n",
+    "    for ref in references:\n",
+    "        ref_times, ref_lats, ref_lons = ref.get_coords()\n",
+    "        lat_inbounds = (ref_lats[0] <= targ_min[0]) and (ref_lats[-1] >= targ_max[0])\n",
+    "        lon_inbounds = (ref_lons[0] <= targ_min[1]) and (ref_lons[-1] >= targ_max[1])\n",
+    "        time_inbounds = (ref_times[0] <= targ_times[0]) and (ref_times[-1] >= targ_times[-1])\n",
+    "        if not (lat_inbounds and lon_inbounds and time_inbounds):\n",
+    "            raise ValueError(\"Incorrect reference dimensions\")\n",
+    "    # check mask\n",
+    "    _, mask_lats, mask_lons = mask.get_coords()\n",
+    "    mask_same_res = (len(targ_lats) == len(mask_lats)) and (len(targ_lons) == len(mask_lons))\n",
+    "    if not mask_same_res:\n",
+    "        raise ValueError(\"Mask is not the same lat/lon shape as target\")\n",
+    "    # mask_nc should just be sliced before being used\n",
+    "    # change these asserts to >= later when that's done\n",
+    "    lat_inbounds = (mask_lats[0] == targ_min[0]) and (mask_lats[-1] == targ_max[0])\n",
+    "    lon_inbounds = (mask_lons[0] == targ_min[1]) and (mask_lons[-1] == targ_max[1])\n",
+    "    if not (lat_inbounds and lon_inbounds):\n",
+    "        raise ValueError(\"Incorrect mask dimensions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validate_grids(target, interp_references, mask_nc)"
    ]
   },
   {
@@ -144,19 +162,6 @@
     "more information can be found in the `tutorial_interpolation` notebook\n",
     "\n",
     "EDIT: just use `linear`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reference_interp_method = \"linear\"\n",
-    "\n",
-    "for r in interp_references:\n",
-    "    r[\"fs_flat\"].U.interp_method = reference_interp_method\n",
-    "    r[\"fs_flat\"].V.interp_method = reference_interp_method"
    ]
   },
   {
@@ -176,9 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_data = utils.generate_mask_none(mask_nc[\"xrds\"][\"u\"].values)\n",
-    "no_data = np.tile(no_data, (target[\"xrds\"][\"time\"].size, 1, 1))\n",
-    "invalid = utils.generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
+    "no_data = utils.generate_mask_none(mask_nc.xrds[\"u\"].values)\n",
+    "no_data = np.tile(no_data, (target.xrds[\"time\"].size, 1, 1))\n",
+    "invalid = utils.generate_mask_invalid(target.xrds[\"u\"].values)\n",
     "invalid_pos = np.where(invalid)\n",
     "num_invalid = invalid.sum()\n",
     "print(f\"total invalid values on target data: {num_invalid}\")"
@@ -196,85 +201,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### note\n",
-    "\n",
-    "https://stackoverflow.com/questions/12923586/nearest-neighbor-search-python\n",
-    "\n",
-    "in theory, the latitude and longitude values are equally spaced. however, the difference between the coordinate values always flucuates a very small amount between two distinct values, so it's not perfectly equally spaced.\n",
-    "\n",
-    "from testing, this causes enough error to completely change a simulation, so a kdtree must be used.\n",
-    "\n",
-    "### another note\n",
-    "\n",
-    "I just looked at the particle trajectory that used the indexing without kd trees and it looked MAJORLY fucked up, so I probably wrote something wrong with the method. TODO will come back to this later."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.spatial\n",
-    "\n",
-    "# set up kdtrees for all references\n",
-    "for f in interp_references:\n",
-    "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lat\"]]).T)\n",
-    "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lon\"]]).T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_nearest_current(ref, t, lat, lon):\n",
-    "    index = (t, ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1])\n",
-    "    return ref[\"xrds\"][\"u\"].values[index], ref[\"xrds\"][\"v\"].values[index]\n",
-    "\n",
-    "\n",
-    "def get_nearest_index(latkd, lonkd, t, lat, lon):\n",
-    "    return t, latkd.query([lat])[1], lonkd.query([lon])[1]\n",
-    "\n",
-    "\n",
-    "def get_nearest_index_2(lat_arr, lon_arr, t, lat, lon):\n",
-    "    lat_diff = np.diff(lat_arr).mean()\n",
-    "    lon_diff = np.diff(lon_arr).mean()\n",
-    "    lat_idx = int(round((lat - lat_arr[0]) / lat_diff))\n",
-    "    lat_idx = max(0, lat_idx)\n",
-    "    lat_idx = min(len(lat_arr) - 1, lat_idx)\n",
-    "    lon_idx = int(round((lon - lon_arr[0]) / lon_diff))\n",
-    "    lon_idx = max(0, lon_idx)\n",
-    "    lon_idx = min(len(lon_arr) - 1, lon_idx)\n",
-    "    return t, lat_idx, lon_idx\n",
-    "\n",
-    "\n",
-    "def get_current_interp(ref, t, lat, lon):\n",
-    "    return ref[\"fs_flat\"].U[t, 0, lat, lon], ref[\"fs_flat\"].V[t, 0, lat, lon]\n",
-    "\n",
-    "\n",
     "def get_interped(i, ref, invalid_where):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        i (int): index on invalid_where\n",
-    "        ref (dict): reference Dataset\n",
+    "        ref (HFRGrid): reference Dataset\n",
     "        invalid_where (array-like): (3, n) dimensional array representing all invalid positions\n",
     "    \n",
     "    Returns:\n",
     "        (u, v): (nan, nan) if no data was found, interpolated values otherwise\n",
     "    \"\"\"\n",
-    "    time_diff = np.diff(ref[\"fs_flat\"].U.grid.time)[0]\n",
+    "    time_diff = np.diff(ref.fieldset_flat.U.grid.time)[0]\n",
     "    t = invalid_where[0][i]\n",
-    "    lat = target[\"lat\"][invalid_where[1][i]]\n",
-    "    lon = target[\"lon\"][invalid_where[2][i]]\n",
-    "    current_u, current_v = get_current_interp(ref, t * time_diff, lat, lon)\n",
+    "    lat = target.lats[invalid_where[1][i]]\n",
+    "    lon = target.lons[invalid_where[2][i]]\n",
+    "    current_u, current_v = ref.get_fs_current(t * time_diff, lat, lon)\n",
     "    current_abs = abs(current_u) + abs(current_v)\n",
     "    # if both the u and v components are 0, there's probably no data there\n",
-    "    if np.isnan(get_nearest_current(ref, t, lat, lon)[0]) or current_abs == 0:\n",
+    "    if np.isnan(ref.get_closest_current(t, lat, lon)[0]) or current_abs == 0:\n",
     "        return np.nan, np.nan\n",
     "    return current_u, current_v"
    ]
@@ -292,14 +241,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_interped_u = target[\"xrds\"][\"u\"].values.copy()\n",
-    "target_interped_v = target[\"xrds\"][\"v\"].values.copy()\n",
+    "target_interped_u = target.xrds[\"u\"].values.copy()\n",
+    "target_interped_v = target.xrds[\"v\"].values.copy()\n",
     "invalid_interped = invalid.copy()\n",
     "for f in interp_references:\n",
     "    invalid_pos_new = np.where(invalid_interped)\n",
     "    num_invalid_new = invalid_interped.sum()\n",
     "    arr_u = np.zeros(num_invalid_new)\n",
     "    arr_v = np.zeros(num_invalid_new)\n",
+    "    print(f\"Attempting to interpolate {num_invalid_new} points...\")\n",
     "    for i in range(num_invalid_new):\n",
     "        c_u, c_v = get_interped(i, f, invalid_pos_new)\n",
     "        arr_u[i] = c_u\n",
@@ -307,16 +257,8 @@
     "    target_interped_u[invalid_pos_new] = arr_u\n",
     "    target_interped_v[invalid_pos_new] = arr_v\n",
     "    invalid_interped = utils.generate_mask_invalid(target_interped_u)\n",
-    "    print(f\"total invalid values after interpolation with {f['name']}: {invalid_interped.sum()}\")\n",
-    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(f\"total invalid values after interpolation with {f}: {invalid_interped.sum()}\")\n",
+    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
     "print(f\"total invalid values on interpolated: {invalid_interped.sum()}\")"
    ]
   },
@@ -348,6 +290,7 @@
     "u_list = target_smoothed_u.tolist()\n",
     "v_list = target_smoothed_v.tolist()\n",
     "\n",
+    "print(f\"Filling {len(u_list)} fields...\")\n",
     "for i in range(len(u_list)):\n",
     "    u_mat = matlab.double(u_list[i])\n",
     "    v_mat = matlab.double(v_list[i])\n",
@@ -359,8 +302,8 @@
     "    target_smoothed_u[i] = u_array\n",
     "    target_smoothed_v[i] = v_array\n",
     "    \n",
-    "target_smoothed_u[np.where(no_data)] = np.nan\n",
-    "target_smoothed_v[np.where(no_data)] = np.nan\n",
+    "target_smoothed_u[no_data] = np.nan\n",
+    "target_smoothed_v[no_data] = np.nan\n",
     "\n",
     "eng.quit()"
    ]
@@ -379,9 +322,9 @@
    "outputs": [],
    "source": [
     "# re-add coordinates, dimensions, and metadata to interpolated data\n",
-    "darr_u = utils.conv_to_dataarray(target_smoothed_u, target[\"xrds\"][\"u\"])\n",
-    "darr_v = utils.conv_to_dataarray(target_smoothed_v, target[\"xrds\"][\"v\"])\n",
-    "target_interped_xrds = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
+    "darr_u = utils.conv_to_dataarray(target_smoothed_u, target.xrds[\"u\"])\n",
+    "darr_v = utils.conv_to_dataarray(target_smoothed_v, target.xrds[\"v\"])\n",
+    "target_interped_xrds = target.xrds.drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
    ]
   },
   {
@@ -409,16 +352,16 @@
    "outputs": [],
    "source": [
     "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
-    "target[\"fs\"].U.show()  # uninterpolated\n",
+    "target.fieldset.U.show()  # uninterpolated\n",
     "fs_interp.U.show()  # interpolated, gapfilled, smoothed"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_parcels",
+   "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3_parcels"
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -430,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
