Add particle analysis class, delete oob particles

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -301,7 +301,8 @@
     "    v_array[:] = uv_smooth[1]\n",
     "    target_smoothed_u[i] = u_array\n",
     "    target_smoothed_v[i] = v_array\n",
-    "    \n",
+    "\n",
+    "# mask the filled data\n",
     "target_smoothed_u[no_data] = np.nan\n",
     "target_smoothed_v[no_data] = np.nan\n",
     "\n",
@@ -333,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = str(target[\"path\"]).split(\".nc\")[0] + \"_interped.nc\"\n",
+    "save_path = str(target.path).split(\".nc\")[0] + \"_interped.nc\"\n",
     "target_interped_xrds.to_netcdf(save_path)\n",
     "print(f\"saved to {save_path}\")"
    ]
