--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -47,9 +47,9 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    # \"plume_track.json\",\n",
-    "    # \"plume_track_totsdlj.json\",\n",
-    "    \"tijuana_interped.json\",\n",
+    "    \"plume_track.json\",\n",
+    "#     \"plume_track_totsdlj.json\",\n",
+    "#     \"tijuana_interped.json\",\n",
     "#     \"tijuana_lin.json\",\n",
     "#     \"tijuana_lin_aggr.json\",\n",
     "#     \"tijuana_less.json\",\n",
@@ -60,10 +60,19 @@
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
-    "grids = [HFRGrid(cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
+    "grids = [HFRGrid(utils.FILES_ROOT / cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sims.append(ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs = grids[0].fieldset"
    ]
   },
   {
