--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -135,11 +135,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for sim in sims:\n",
-    "    print(sim.generate_gif())"
+    "    frames = sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name)\n",
+    "    print(sim.parcels_result.generate_gif(frames, utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
    ]
   }
  ],
