--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -28,7 +28,8 @@
    "source": [
     "import utils\n",
     "from parcels_utils import HFRGrid\n",
-    "from parcels_sim import ParcelsSimulation"
+    "from parcels_sim import ParcelsSimulation\n",
+    "from parcels_analysis import ParticlePlotFeature"
    ]
   },
   {
@@ -58,6 +59,14 @@
     "#     \"tijuana_range.json\",\n",
     "#     \"buoy_track.json\",\n",
     "]\n",
+    "\n",
+    "domain = None\n",
+    "# domain = dict(\n",
+    "#     S=32.53,\n",
+    "#     N=32.564,\n",
+    "#     W=-117.162,\n",
+    "#     E=-117.105\n",
+    "# )\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "grids = [HFRGrid(utils.FILES_ROOT / cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
@@ -140,8 +149,9 @@
    },
    "outputs": [],
    "source": [
+    "sim.parcels_result.add_plot_feature(ParticlePlotFeature.get_sd_stations(), station=True)\n",
     "for sim in sims:\n",
-    "    frames = sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name)\n",
+    "    frames = sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
     "    print(sim.parcels_result.generate_gif(frames, utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
    ]
   }
