--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -145,10 +145,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": [
+     "outputPrepend"
+    ]
    },
    "outputs": [],
    "source": [
+    "sim.parcels_result.plot_features = []\n",
     "sim.parcels_result.add_plot_feature(ParticlePlotFeature.get_sd_stations(), station=True)\n",
     "for sim in sims:\n",
     "    frames = sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
