--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -29,7 +29,7 @@
     "import utils\n",
     "from parcels_utils import HFRGrid\n",
     "from parcels_sim import ParcelsSimulation\n",
-    "from parcels_analysis import ParticlePlotFeature"
+    "from parcels_analysis import *"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "sim.parcels_result.plot_features = []\n",
-    "sim.parcels_result.add_plot_feature(ParticlePlotFeature.get_sd_stations(), station=True)\n",
+    "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations())\n",
     "for sim in sims:\n",
     "    frames = sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
     "    print(sim.parcels_result.generate_gif(frames, utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
