Add domain change feature

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "sim.parcels_result.plot_features = []\n",
-    "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations())\n",
+    "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
     "for sim in sims:\n",
     "    frames = sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
     "    print(sim.parcels_result.generate_gif(frames, utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
