--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -60,13 +60,13 @@
     "#     \"buoy_track.json\",\n",
     "]\n",
     "\n",
-    "domain = None\n",
-    "# domain = dict(\n",
-    "#     S=32.53,\n",
-    "#     N=32.564,\n",
-    "#     W=-117.162,\n",
-    "#     E=-117.105\n",
-    "# )\n",
+    "# domain = None\n",
+    "domain = dict(\n",
+    "    S=32.53,\n",
+    "    N=32.564,\n",
+    "    W=-117.162,\n",
+    "    E=-117.105\n",
+    ")\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "grids = [HFRGrid(utils.FILES_ROOT / cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
@@ -146,25 +146,22 @@
    "execution_count": null,
    "metadata": {
     "scrolled": true,
-    "tags": [
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "sim.parcels_result.plot_features = []\n",
+    "sim.parcels_result.plot_features = {}\n",
     "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
     "for sim in sims:\n",
-    "    frames = sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
-    "    print(sim.parcels_result.generate_gif(frames, utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
+    "    sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
+    "    print(sim.parcels_result.generate_gif(utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3-parcels",
-   "language": "python",
-   "name": "py3-parcels"
+   "name": "python3",
+   "display_name": "Python 3.7.10 64-bit ('py3-parcels': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -177,6 +174,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "interpreter": {
+   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
   }
  },
  "nbformat": 4,
