--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -152,6 +152,7 @@
    "source": [
     "sim.parcels_result.plot_features = {}\n",
     "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
+    "sim.parcels_result.max_life = 86400 / 2\n",
     "for sim in sims:\n",
     "    sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
     "    print(sim.parcels_result.generate_gif(utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
