Failed attempt to fix gapfill

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -67,9 +67,11 @@
     "import numpy as np\n",
     "from parcels import FieldSet\n",
     "from datetime import timedelta, datetime\n",
+    "from gridfill import fill\n",
     "\n",
     "import utils\n",
-    "from parcels_utils import xr_dataset_to_fieldset, HFRGrid"
+    "from parcels_utils import xr_dataset_to_fieldset, HFRGrid\n",
+    "from constants import *"
    ]
   },
   {
@@ -302,11 +304,18 @@
     "    target_smoothed_u[i] = u_array\n",
     "    target_smoothed_v[i] = v_array\n",
     "\n",
+    "eng.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# mask the filled data\n",
     "target_smoothed_u[no_data] = np.nan\n",
-    "target_smoothed_v[no_data] = np.nan\n",
-    "\n",
-    "eng.quit()"
+    "target_smoothed_v[no_data] = np.nan"
    ]
   },
   {
