--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -67,6 +67,7 @@
     "    W=-117.162,\n",
     "    E=-117.105\n",
     ")\n",
+    "domain = TIJUANA_MOUTH_DOMAIN\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "grids = [HFRGrid(utils.FILES_ROOT / cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
@@ -160,9 +161,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.10 64-bit ('py3-parcels': conda)"
+   "display_name": "py3-parcels",
+   "language": "python",
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,9 +180,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
-  },
-  "interpreter": {
-   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
   }
  },
  "nbformat": 4,
