Edit plume table plot

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -2,50 +2,48 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# parcels regions\n",
     "\n",
     "runs parcels on existing netcdf files"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import utils\n",
     "from parcels_utils import HFRGrid\n",
     "from parcels_sim import ParcelsSimulation\n",
     "from parcels_analysis import *"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## configuration\n",
     "\n",
     "change the contents of `configs` for the simulation configuration you want"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "configs = [\n",
     "    \"plume_track.json\",\n",
@@ -74,90 +72,93 @@
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sims.append(ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"]))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "fs = grids[0].fieldset"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Animated gif stuff and particle simulation"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### ParticleSet and spawn point setup\n",
     "\n",
     "note about interpolation methods: only `linear` works if you want to use the FieldSet in a ParticleSet."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "[sim.pset.show(field=\"vector\", vmax=ParcelsSimulation.MAX_V) for sim in sims]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### simulation setup and execution\n",
     "\n",
     "simulation parameter setup"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
     "for sim in sims:\n",
     "    sim.execute()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### gif generation\n",
     "\n",
     "don't have to run, requires [magick](https://imagemagick.org/index.php)\n",
     "\n",
     "the gifs will be saved `snapshots/`"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "tags": []
-   },
-   "outputs": [],
    "source": [
     "sim.parcels_result.plot_features = {}\n",
     "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
+    "sim.parcels_result.add_plot_feature(LatTrackedPointFeature.get_tijuana_mouth(), name=\"mouth\")\n",
     "sim.parcels_result.max_life = 86400 / 2\n",
     "for sim in sims:\n",
     "    sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
     "    print(sim.parcels_result.generate_gif(utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   }
   }
  ],
  "metadata": {
@@ -165,9 +166,8 @@
    "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
   },
   "kernelspec": {
-   "display_name": "py3-parcels",
-   "language": "python",
-   "name": "py3-parcels"
+   "name": "python3",
+   "display_name": "Python 3.7.10 64-bit ('py3-parcels': conda)"
   },
   "language_info": {
    "codemirror_mode": {
